--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,14 +63,34 @@ flutter:
     - assets/
     - assets/Languages/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto/Roboto-Regular.ttf
+        - asset: fonts/Roboto/Roboto-Italic.ttf
+          style: italic
+        - asset: fonts/Roboto/Roboto-Medium.ttf
+          weight: 500
+        - asset: fonts/Roboto/Roboto-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/Roboto/Roboto-Light.ttf
+          weight: 300
+        - asset: fonts/Roboto/Roboto-LightItalic.ttf
+          weight: 300
+          style: italic
+    - family: TitilliumWeb
+      fonts:
+        - asset: fonts/TitilliumWeb/TitilliumWeb-Regular.ttf
+        - asset: fonts/TitilliumWeb/TitilliumWeb-Italic.ttf
+          style: italic
+        - asset: fonts/TitilliumWeb/TitilliumWeb-SemiBold.ttf
+          weight: 500
+        - asset: fonts/TitilliumWeb/TitilliumWeb-SemiBoldItalic.ttf
+          weight: 500
+          style: italic
+        - asset: fonts/TitilliumWeb/TitilliumWeb-Light.ttf
+          weight: 300
+        - asset: fonts/TitilliumWeb/TitilliumWeb-LightItalic.ttf
+          style: italic
+          weight: 300
