--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   shared_preferences: ^2.0.8
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
