--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_svg: ^0.22.0
   shared_preferences: ^2.0.8
   font_awesome_flutter: ^9.1.0
+  flutter_swiper_null_safety: ^1.0.2
 
 dev_dependencies:
   flutter_test:
