--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.0.8
   font_awesome_flutter: ^9.1.0
   flutter_swiper_null_safety: ^1.0.2
+  sprintf: ^6.0.0
 
 dev_dependencies:
   flutter_test:
