--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   flutter_swiper_null_safety: ^1.0.2
   sprintf: ^6.0.0
+  qr_code_scanner: ^0.4.0
 
 dev_dependencies:
   flutter_test:
