--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^5.0.0
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   shared_preferences: ^2.0.8
