--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pointycastle: ^3.4.0
   pem: ^2.0.0
   basic_utils: ^3.9.0
+  string_validator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
