--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   basic_utils: ^3.9.0
   string_validator: ^0.3.0
   intl: ^0.17.0
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
