--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   string_validator: ^0.3.0
   intl: ^0.17.0
   uuid: ^3.0.5
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
