--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   uuid: ^3.0.5
   fluttertoast: ^8.0.8
+  flutter_local_notifications: ^9.1.4
 
 dev_dependencies:
   flutter_test:
